# hello-openGL

./: README.md
app/: build.gradle
app/src/androidTest/java/com/blueeagle/helloopengl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/blueeagle/helloopengl/: GLContextFactory.java  GLHelper.java  MainActivity.java  MyGLRenderer.java  MyGLSurfaceView.java  RawResourceReader.java  Rectangle.java  TextureHelper.java  Triangle.java
app/src/main/java/com/blueeagle/helloopengl/gl/: GLContextFactory.java  GLHelper.java  MyGLRenderer.java  MyGLSurfaceView.java
app/src/main/java/com/blueeagle/helloopengl/models/: MagicRectangle.java  Rectangle.java  Triangle.java
app/src/main/java/com/blueeagle/helloopengl/utils/: ProgramHelper.java  RawResourceReader.java  ShaderHelper.java  TextureHelper.java
app/src/main/jni/: BaseModel.h  CMakeLists.txt  GLES2Utils.cpp  GLES2Utils.h  GLES2Wrapper.cpp  Rectangle.cpp  ShapeGlobal.h  Triangle.cpp
app/src/main/res/drawable/: bg_round.xml  ic_left_arrow.xml  ic_right_arrow.xml  selector_btn_left.xml  selector_btn_right.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: rect_fragment_shader_code.glsl  rect_vertex_shader_code.glsl  simple_triangle_fragment_shader.glsl  simple_triangle_vertex_shader.glsl  triangle_fragment_shader.glsl  triangle_vertex_shader.glsl
app/src/main/res/values/: colors.xml
app/src/test/java/com/blueeagle/helloopengl/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
